--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ authors = [
 dependencies = [
     "django>=4.2.4",
     "djangorestframework>=3.14.0",
+    "setuptools>=68.1.2",
 ]
 requires-python = ">=3.10"
 license = {text = "MIT"}
