--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ asgiref==3.7.2
 django==4.2.4
 djangorestframework==3.14.0
 pytz==2023.3
+setuptools==68.1.2
 sqlparse==0.4.4
 typing-extensions==4.7.1
