adicao de imagens nos veiculos

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
 django==4.2.4
 djangorestframework==3.14.0
+Pillow==10.0.0
+python-magic==0.4.27
 pytz==2023.3
 setuptools==68.1.2
 sqlparse==0.4.4
