--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 asgiref==3.7.2
+attrs==23.1.0
 django==4.2.4
 djangorestframework==3.14.0
+drf-spectacular==0.26.4
+inflection==0.5.1
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
 Pillow==10.0.0
 python-magic==0.4.27
 pytz==2023.3
+PyYAML==6.0.1
+referencing==0.30.2
+rpds-py==0.9.2
 setuptools==68.1.2
 sqlparse==0.4.4
 typing-extensions==4.7.1
+uritemplate==4.1.1
