--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 asgiref==3.7.2
 attrs==23.1.0
 django==4.2.4
+django-extensions==3.2.3
 djangorestframework==3.14.0
 drf-spectacular==0.26.4
 inflection==0.5.1
 jsonschema==4.19.0
 jsonschema-specifications==2023.7.1
 Pillow==10.0.0
+pydotplus==2.0.2
+pyparsing==3.1.1
 python-magic==0.4.27
 pytz==2023.3
 PyYAML==6.0.1
